docs/api/qiskit/0.24/qiskit.aqua.algorithms.NumPyLSsolver.md
---
title: NumPyLSsolver
description: API reference for qiskit.aqua.algorithms.NumPyLSsolver
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.algorithms.NumPyLSsolver
---

<span id="qiskit-aqua-algorithms-numpylssolver" />

# qiskit.aqua.algorithms.NumPyLSsolver

<span id="qiskit.aqua.algorithms.NumPyLSsolver" />

`NumPyLSsolver(matrix, vector)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/aqua/algorithms/linear_solvers/numpy_ls_solver.py "view source code")

The Numpy LinearSystem algorithm (classical).

This linear system solver computes the eigenvalues of a complex-valued square matrix $A$ of dimension $n \times n$ and the solution to the systems of linear equations defined by $A\overrightarrow{x}=\overrightarrow{b}$ with input vector $\overrightarrow{b}$.

This is a classical counterpart to the [`HHL`](qiskit.aqua.algorithms.HHL "qiskit.aqua.algorithms.HHL") algorithm.

**Parameters**

*   **matrix** (`Union`\[`List`\[`List`\[`float`]], `ndarray`]) – The input matrix of linear system of equations
*   **vector** (`Union`\[`List`\[`float`], `ndarray`]) – The input vector of linear system of equations

### \_\_init\_\_

<span id="qiskit.aqua.algorithms.NumPyLSsolver.__init__" />

`__init__(matrix, vector)`

**Parameters**

*   **matrix** (`Union`\[`List`\[`List`\[`float`]], `ndarray`]) – The input matrix of linear system of equations
*   **vector** (`Union`\[`List`\[`float`], `ndarray`]) – The input vector of linear system of equations

## Methods

|                                                                                                                              |                                                               |
| ---------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------- |
| [`__init__`](#qiskit.aqua.algorithms.NumPyLSsolver.__init__ "qiskit.aqua.algorithms.NumPyLSsolver.__init__")(matrix, vector) | **type matrix**`Union`\[`List`\[`List`\[`float`]], `ndarray`] |
| [`run`](#qiskit.aqua.algorithms.NumPyLSsolver.run "qiskit.aqua.algorithms.NumPyLSsolver.run")()                              | Execute the classical algorithm.                              |

## Attributes

|                                                                                                        |                        |
| ------------------------------------------------------------------------------------------------------ | ---------------------- |
| [`random`](#qiskit.aqua.algorithms.NumPyLSsolver.random "qiskit.aqua.algorithms.NumPyLSsolver.random") | Return a numpy random. |

### random

<span id="qiskit.aqua.algorithms.NumPyLSsolver.random" />

`property random`

Return a numpy random.

### run

<span id="qiskit.aqua.algorithms.NumPyLSsolver.run" />

`run()`

Execute the classical algorithm.

**Returns**

results of an algorithm.

**Return type**

dict

